--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div>
             <h4>Les tableaux - Titre H4</h4>
-            <table border="1" width="50%">
+            <table border="1" cellpadding="8" cellspacing="3">
                 <!-- Légende -->
                 <caption>Populations d'Europe</caption>
                 <!-- Entête -->
@@ -56,6 +56,58 @@
                     <tr>
                         <td>Espagne</td>
                         <td>47M</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <!-- tableau complexe -->
+        <div>
+            <h4>Tableau complexe - Titre H4</h4>
+            <table border="1" cellpadding="10" cellspacing="3">
+                <thead>
+                    <tr>
+                        <th>Entreprise</th>
+                        <th>Division</th>
+                        <th>Ref</th>
+                        <th>Franchise</th>
+                        <th>Employés</th>
+                        <th>CA(en million d'€)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td rowspan="6">Google</td>
+                        <td rowspan="5">Google Ltd.</td>
+                        <td rowspan="3">YT</td>
+                        <td>ADS</td>
+                        <td>1052</td>
+                        <td>10.7</td>
+                    </tr>
+                    <tr>
+                        <td>BTO</td>
+                        <td>204</td>
+                        <td>150.1</td>
+                    </tr>
+                    <tr>
+                        <td>CSI</td>
+                        <td>3543</td>
+                        <td>60.0</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">MAP</td>
+                        <td>ADS</td>
+                        <td>48</td>
+                        <td>10.7</td>
+                    </tr>
+                    <tr>
+                        <td>BTO</td>
+                        <td>5471</td>
+                        <td>15.8</td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">Total</td>
+                        <td>10318</td>
+                        <td>247.3</td>
                     </tr>
                 </tbody>
             </table>
@@ -112,7 +164,6 @@
             <input type="submit" value="Envoyer">
         </form>
     </section>
-    
     <footer>
         <a href="mailto:test@gmail.com">Envoyez-nous un mail</a><br>
         <a href="notice.txt" download="notice">Télécharger la notice</a>
